kubernetes/apps/nextcloud/nextcloud/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
spec:
  hostnames: ["cloud.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: Exact
            value: /whiteboard
      filters:
        - type: RequestRedirect
          requestRedirect:
            statusCode: 301
            path:
              type: ReplaceFullPath
              replaceFullPath: /whiteboard/
    - matches:
        - path:
            type: PathPrefix
            value: /whiteboard
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: whiteboard
          namespace: nextcloud
          port: 3002
    - backendRefs:
        - name: nextcloud
          namespace: nextcloud
          port: 8080
